--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -99,13 +99,13 @@
   "GLOSSARY_DESC555": "Afin d’aider à mieux comprendre cette question, la vue bilatérale donne une estimation de la différence entre les flux miroir qui met en évidence des incohérences majeures et offre à l'utilisateur la possibilité de comparer les données.",
   "CORPUS_INTRO_TITLE": "Corpus",
   "SOURCES_INTRO_TITLE": "Sources",
-  "SOURCES_PARA1": "Le Corpus RICardo rassemble de nombreuses sources de statistiques de commerce que nous avons listées et décrites dans ce tableau.",
+  "SOURCES_PARA1": "La liste complète des sources consultées pour la collecte des données de commerce et de taux de change est disponible dans cette table.",
   "RIC_INTRO_TITLE": "Entités RIC",
-  "RIC_PARA1": "Les noms de pays/entités rencontrés dans les sources ont été classés dans une table d'entités RIC proposée au lecteur.",
+  "RIC_PARA1": "La base de commerce RICardo recense environ 1400 entités commerciales dont la liste est disponible ici.  Pour plus d’explications sur les RIC entities, voir le glossaire.",
   "EXCHANGES_INTRO_TITLE": "Taux de change",
   "EXCHANGES_PARA1": "Les valeurs des flux de commerce ont été systématiquement converties en livres sterling grâce à cette base de taux de change.",
-  "OPEN_INTRO_TITLE": "Données ouvertes",
-  "OPEN_PARA1": "Les données utilisées dans cette application proviennent toutes du corpus RICardo. Ce dernier contient de nombreux enregistrements qui ne sont pas présentés dans cet outil par choix des auteurs. Par exemple, les statistiques de commerce provenant de sources secondaires ont été filtrées quand une source primaire était disponible. La base de données RICardo complète est disponible sur",
+  "OPEN_INTRO_TITLE": "Bas de commerce RICardo",
+  "OPEN_PARA1": "La base de commerce RICardo complète rassemble toutes les données collectées depuis le début du projet. L’utilisateur trouvera ici une base de données (nettoyée) et directement utilisable. En particulier, les doublons ont été filtrés en privilégiant les sources primaires (voir Glossaire). La base complète reste disponible sur ",
   "WORLD_INTRO": "World",
   "WORLD_INTRO_PARA": "World propose plusieurs estimations du commerce mondial calculées à partir des différentes façons d’estimer le commerce total d’une entité déclarante (voir Glossaire ‘Commerce mondial / Commerce total’). Ces estimations peuvent être comparées aux séries de commerce mondial de 'Federico-Tena World Trade Historical Data Base'. Pour chaque estimation sélectionnée, la vue indique le nombre d’entités déclarantes disponible et permet de comparer la part dans le commerce mondial d’une sélection d’entités déclarantes.",
   "WORLD_COMPARE_TITLE": "Estimations du commerce mondial ",
@@ -153,10 +153,11 @@
   "REPORTING_PARTNER_HEATMAP_2": "Noter qu’elle est imparfaite car le nombre de partners varie selon les années.",
   "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordonnés par ",
   "PARTNER_HEATMAP_LEGEND_FADEIN": "Part du commerce bilatéral par année",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL": "La couleur de la ligne du pays represente le tiertile par rapport au volume globale",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL_1": "Premier 'tiertile'",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL_2": "Second 'tiertile'",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL_3": "Troisième 'tiertile'",
+  "PARTNER_HEATMAP_LEGEND_REPORTING_VOLUME": "L'opacité représente le volume annuel de commerce normalisé par reporting",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL": "La couleur représente par terciles la valeur moyenne du commerce du reporting avec le partner.",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_1": "Premier tercile",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_2": "Second tercile",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_3": "Troisième tercile",
   "AVERAGE_SHARE": "Moyenne des parts de commerce annuelles",
   "NUMBER_YEARS": "Nombre d'années disponibles",
   "NAME": "Nom de l'entité",
@@ -170,23 +171,25 @@
   "LINE_CHART_PERCENT_1": "Les pourcentages sont basés sur la quantité totale de",
   "LINE_CHART_PERCENT_2": " de ",
   "LINE_CHART_SELECT": "SELECTIONNEZ 5 ENTITES : ",
-  "PARTNER_INTRO_TITLE": "Partenaire commercial",
-  "PARTNER_INTRO_PARA": "La vue Partenaire commercial détaille les échanges commerciaux d'une entité, tels que décrits par les différents reportings.",
+  "PARTNER_INTRO_TITLE": "Partner",
+  "PARTNER_INTRO_PARA": "Pour le partner sélectionné, la vue Partner précise le statut politique et propose plusieurs visualisations élaborées en reconstituant l’évolution de son commerce à partir des statistiques commerciales des reportings le citant.",
   "PARTNER_TITLE_1": "Le partenaire commercial ",
   "PARTNER_STATUSES_TITLE": "Statuts politiques",
   "PARTNER_STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du partenaire sélectionné sur la période, ainsi que ses périodes de souveraineté.",
-  "PARTNER_REPORTER_CITATION_TITLE": "Nombre de reporting citant",
+  "PARTNER_REPORTING_CITATION_TITLE": "Nombre de reporting.s citant",
+  "PARTNER_REPORTING_CITATION": "Pour le partner sélectionné, ce graphique indique le nombre annuel de reportings qui le recensent dans leurs statistiques commerciales.",
   "PARTNER_REPORTER_HEATMAP_TITLE_1": "Commerce de ",
   "PARTNER_REPORTER_HEATMAP_TITLE_2": " avec ses reportings",
   "PARTNER_REPORTER_HEATMAP_TITLE_ORDER": "ordonnés par",
   "PARTNER_REPORTER_HEATMAP_TITLE_FIELD": "couleur basée sur",
+  "PARTNER_REPORTER_HEATMAP_INTRODUCTION": "Ce graphique liste les reportings citant le partner dans leur statistique. Leur volume de commerce est représenté en valeur absolue, la vue partner ne représentant pas l'exhaustivité de la liste des reportings.",
   "PARTNER_HEATMAP_ORDER_PLACEHOLDER": "",
   "PARTNER_HEATMAP_FIELD_PLACEHOLDER": "",
   "SELECT_PARTNER": "Chercher un partenaire...",
   "SELECT_MIN_YEAR": "Date de début",
   "SELECT_MAX_YEAR": "Date de fin",
   "BILATERAL_INTRO_TITLE": "Bilateral",
-  "BILATERAL_INTRO_PARA": "Bilateral montre le commerce entre un pays déclarant et l’un de ses partenaires (type Country). Elle compare la disponibilité des statistiques de commerce bilatéral dans les deux pays sélectionnés. Elle estime la divergence entre les flux miroirs du point du vue du pays déclarant (voir le Glossaire pour la définition des termes).",
+  "BILATERAL_INTRO_PARA": "Bilateral montre le commerce entre un reporting et l’un de ses partners. Elle compare la disponibilité des statistiques de commerce bilatéral dans les deux pays sélectionnés. Elle estime la divergence entre les flux miroirs du point du vue du pays déclarant (voir le Glossaire pour la définition des termes).",
   "BILATERAL_1": "Commerce entre ",
   "BILATERAL_2": " comme rapporté par ",
   "BILATERAL_BRUSH_1": "Années disponibles pour les échanges commerciaux entre ",
