--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -99,13 +99,13 @@
   "GLOSSARY_DESC555": "To help tackle this issue, the bilateral view shows an estimation of the discrepancy in mirror flows that facilitates the detection of major inconsistencies and provides the user with the opportunity to compare data.",
   "CORPUS_INTRO_TITLE": "Corpus",
   "SOURCES_INTRO_TITLE": "Sources",
-  "SOURCES_PARA1": "The RICardo Corpus gathers many trade statistics sources that are listed and described in this table.",
+  "SOURCES_PARA1": "The complete list of sources used to collect trade and exchange rates data is available in this table.",
   "RIC_INTRO_TITLE": "RIC entities",
-  "RIC_PARA1": "The names of countries/entities found in the sources are classified in a RIC entities table that the user can find here.",
+  "RIC_PARA1": "The RICardo trade database identifies c.1400 trading entities the list of which can be found here. For more explanations about the RIC entities, see the glossary.",
   "EXCHANGES_INTRO_TITLE": "Exchange rates",
   "EXCHANGES_PARA1": "The values of trade flows have been converted into pound sterling by using the exchange rate table.",
-  "OPEN_INTRO_TITLE": "Open Data",
-  "OPEN_PARA1": "The data used in this application come all from the RICardo Corpus. The authors have decided not to publish some data in the exploratory tool. For example, trade statistics extracted from secondary sources have been filtered when a primary source was available. The complete RICardo database is available on",
+  "OPEN_INTRO_TITLE": "Ricardo trade dataset",
+  "OPEN_PARA1": "The complete RICardo trade database gathers all data that have been collected since the beginning of the project. The user will find here a database that (has been cleaned) and can be used directly. In particular, duplicates have been filtered by giving priority to primary sources (see Glossary). The complete RICardo database is available on ",
   "WORLD_INTRO": "World",
   "WORLD_INTRO_PARA": "World provides several estimations of world trade calculated from the different ways of estimating the total trade of a reporting entity (see Glossary ‘World trade / Total trade’). They are compared to the world trade series of 'Federico-Tena World Trade Historical Data Base'. For each selected estimation, the view specifies the available number of reporting entities and allows for a comparison of the share in world trade of a selection of reporting entities.",
   "WORLD_COMPARE_TITLE": "Estimates of world trade ",
@@ -153,10 +153,11 @@
   "REPORTING_PARTNER_HEATMAP_1": "This graph provides an overall partner comparison by representing their annual share in the reporting trade.",
   "REPORTING_PARTNER_HEATMAP_2": "Note that it is flawed by the variable number of partners each year",
   "PARTNER_HEATMAP_LEGEND_FADEIN": "Bilateral trade annual share",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL": "FIXME: La couleur de la ligne du pays represente le tiertile par rapport au volume globale",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL_1": "FIXME: premier 'tiertile'",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL_2": "FIXME: second 'tiertile'",
-  "PARTNER_HEATMAP_LEGEND_PERCENTIL_3": "FIXME: troisième 'tiertile'",
+  "PARTNER_HEATMAP_LEGEND_REPORTING_VOLUME": "Opacity represents annual trade volume normalized by reporting",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL": "Color represents reporting-partner average annual trade volume by terciles",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_1": "First tercile",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_2": "Second tercile",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_3": "Third tercile",
   "AVERAGE_SHARE": "Average annual shares of trade",
   "NUMBER_YEARS": "Number of available years",
   "NAME": "Entity name",
@@ -171,20 +172,22 @@
   "LINE_CHART_PERCENT_1": "The percentages are based on the total amount of ",
   "LINE_CHART_PERCENT_2": " of ",
   "LINE_CHART_SELECT": "SELECT UP TO 5 PARTNERS:",
-  "PARTNER_INTRO_TITLE": "Trade partner",
-  "PARTNER_INTRO_PARA": "The Partner view shows the total trade of an entity, as reported by the various reporting entities.",
+  "PARTNER_INTRO_TITLE": "Partner",
+  "PARTNER_INTRO_PARA": "For the selected partner, the Partner view specifies the political status and provides visualizations of its trade growth that are built by using trade statistics of the reportings which cites it.",
   "PARTNER_TITLE_1": "The trade partner ",
   "PARTNER_STATUSES_TITLE": "Political statuses",
   "PARTNER_STATUSES_INTRO": "This chart represents the evolution of the selected trade partner's dependencies count. It also shows the periods of sovereignty.",
-  "PARTNER_REPORTER_CITATION_TITLE": "Reporting number that reference",
+  "PARTNER_REPORTING_CITATION_TITLE": "Reporting number that reference",
+  "PARTNER_REPORTING_CITATION": "For the selected partner, this chart indicates the annual count of reportings that identify it in their trade statistics.",
   "PARTNER_REPORTER_HEATMAP_TITLE_1": "Trade of ",
   "PARTNER_REPORTER_HEATMAP_TITLE_2": " with its reportings",
   "PARTNER_REPORTER_HEATMAP_TITLE_ORDER": "Order by",
   "PARTNER_REPORTER_HEATMAP_TITLE_FIELD": "Color based on",
+  "PARTNER_REPORTER_HEATMAP_INTRODUCTION": "This graph provides the list of reporting citing the partner in their statistics. Reporting trade volume are repesented with absolute values, the partner view depicting only partially the partner trade.",
   "PARTNER_HEATMAP_ORDER_PLACEHOLDER": "",
   "PARTNER_HEATMAP_FIELD_PLACEHOLDER": "",
   "BILATERAL_INTRO_TITLE": "Bilateral",
-  "BILATERAL_INTRO_PARA": "Bilateral shows trade between a reporting country and one of its partners (Country type). It compares the availability of bilateral trade statistics in the two selected countries. It estimates the divergence in the mirror flows from the point of view of the reporting country (see Glossary for the definition of terms).",
+  "BILATERAL_INTRO_PARA": "Bilateral shows trade between a reporting and one of its partners. It compares the availability of bilateral trade statistics in the two selected countries. It estimates the divergence in the mirror flows from the point of view of the reporting country (see Glossary for the definition of terms).",
   "BILATERAL_1": "Trade between ",
   "BILATERAL_2": " as reported by ",
   "BILATERAL_BRUSH_1": "Available years in ",
